# multiplatform-testing

./: .cirrus.yml  build.gradle.kts  gradle.properties  readme.md  settings.gradle.kts
.github/workflows/: images_inspection.yml  release.yml  snapshots.yml  test.yml  test_androidjvm.yml  test_androidnative.yml
docs/: 00_install.mdx  01_android_jvm.mdx  02_android_native.mdx  android_native.mdx  index.mdx
plugin/: build.gradle.kts
plugin/src/main/kotlin/io/deepmedia/tools/testing/: MultiplatformTestingExtension.kt  MultiplatformTestingPlugin.kt
runner-dlopen/: build.gradle.kts
runner-dlopen/src/main/cpp/: CMakeLists.txt  main.cpp
sample/: build.gradle.kts
sample/src/androidDeviceTest/kotlin/io/deepmedia/tools/testing/sample/: AndroidJvmDeviceTests.kt
sample/src/androidMain/: AndroidManifest.xml
sample/src/androidMain/kotlin/io/deepmedia/tools/testing/sample/: AndroidJvmActivity.kt  AndroidJvmOps.kt
sample/src/androidNativeArm32Main/kotlin/io/deepmedia/tools/testing/sample/: AndroidNativeArm32Ops.kt
sample/src/androidNativeArm32Test/kotlin/io/deepmedia/tools/testing/sample/: AndroidNativeArm32Tests.kt
sample/src/androidNativeArm64Main/kotlin/io/deepmedia/tools/testing/sample/: AndroidNativeArm64Ops.kt
sample/src/androidNativeArm64Test/kotlin/io/deepmedia/tools/testing/sample/: AndroidNativeArm64Tests.kt
sample/src/androidNativeMain/kotlin/io/deepmedia/tools/testing/sample/: AndroidNativeOps.kt
sample/src/androidNativeTest/kotlin/io/deepmedia/tools/testing/sample/: AndroidNativeConcreteTests.kt  AndroidNativeTests.kt
(+31 files in other folders)
